# ffmpeg4.xdemo

./: build.gradle  settings.gradle
app/: build.gradle  ffmpeg_build.sh
app/src/androidTest/java/android/spport/myffmpeg42demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/android/spport/myffmpeg42demo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/android/spport/myffmpeg42demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
